tests/testdata/30_safe_errors/46_value_move_twice.xc
// Value move twice: second move uses already-sunk source.
// expect-error: has not been initialized

struct Obj {
    value: int;
}

func main() {
    var a = Obj{value: 1};
    var b = move a;
    var c = move a;     // error: 'a' used after move
}
